--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.0",
+    "firebase": "^9.1.0",
     "framer-motion": "^4.1.17",
     "moment": "^2.29.1",
     "react": "^17.0.2",
